.gitlab/ci/tests/chainsaw-tests/kustomization/tests/03-ensure-force-cluster-policy/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
# Tests that ClusterPolicies managed by Flux are denied if missing the required 'force' annotation.
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: ensure-force-cluster-policy
spec:
  steps:
  - name: "Ensure cluster policy label enforce"
    try:
    - apply:
        file: ensure-force-cluster-policy.yaml
        expect:
        - check:
            ($error != null): true
            (contains($error, 'ensure-force-cluster-policy')): true
    - delete:
        file: ensure-force-cluster-policy.yaml
  - name: "Sleep to prevent client rate limiter from blocking the next test"
    try:
    - script:
        content: sleep 2
